--- a/trunk/Eproject_WebApp/nbproject/project.properties
+++ b/trunk/Eproject_WebApp/nbproject/project.properties
@@ -136,7 +136,8 @@ javac.classpath=\
     ${file.reference.jnp-client.jar}:\
     ${file.reference.slf4j-api.jar}:\
     ${file.reference.slf4j-jboss-logging.jar}:\
-    ${file.reference.xmlsec.jar}
+    ${file.reference.xmlsec.jar}:\
+    ${reference.Eproject_EJB.dist}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -168,6 +169,8 @@ lib.dir=${web.docbase.dir}/WEB-INF/lib
 no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
+project.Eproject_EJB=../../../Eproject_EJB/trunk/Eproject_EJB
+reference.Eproject_EJB.dist=${project.Eproject_EJB}/dist/Eproject_EJB.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
